Homework-5: Fixed a typo

--- a/Homework/5/Homework-5.tex
+++ b/Homework/5/Homework-5.tex
@@ -347,7 +347,7 @@ $$
 3.6
 \end{bmatrix}
 =
-\begin{bmatrix} 0.312 \\ .4862 \\ .5514 \end{bmatrix}
+\begin{bmatrix} .0312 \\ .4862 \\ .5514 \end{bmatrix}
 $$
 To see how good we did we can look at the error by looking at how close our equation is for the given points.
 $$
