--- a/Final/Part1/Final-p1.tex
+++ b/Final/Part1/Final-p1.tex
@@ -24,7 +24,7 @@ Show all your work and clearly indicate your answer.
 \centering
 \begin{tikzpicture}[>=stealth]
     \begin{axis}[
-        xmin=-.5,xmax=4,
+        xmin=-.5,xmax=4.5,
         ymin=-.5,ymax=2,
         axis x line=middle,
         axis y line=middle,
@@ -32,7 +32,7 @@ Show all your work and clearly indicate your answer.
         xlabel={$t$},
         ylabel={$p(t)$},
         width=0.45\textwidth,
-        height=0.3\textwidth,
+        height=0.25\textwidth,
         ]
         \addplot[no marks,black,-] expression[domain=0:1,samples=20]{1};
         \addplot[no marks,black,-]coordinates {(1,0)(1,1)};
@@ -41,7 +41,7 @@ Show all your work and clearly indicate your answer.
 \centering
 \begin{tikzpicture}[>=stealth]
     \begin{axis}[
-        xmin=-.5,xmax=4,
+        xmin=-.5,xmax=4.5,
         ymin=-.5,ymax=2,
         axis x line=middle,
         axis y line=middle,
@@ -49,7 +49,7 @@ Show all your work and clearly indicate your answer.
         xlabel={$t$},
         ylabel={$g(t)$},
         width=0.45\textwidth,
-        height=0.3\textwidth,
+        height=0.25\textwidth,
         ]
         \addplot[no marks,black, dashed]coordinates {(0,1)(1,1)};
         \addplot[no marks,black,-]coordinates {(0,0)(1,1)};
@@ -60,17 +60,118 @@ Show all your work and clearly indicate your answer.
     \end{axis}
 \end{tikzpicture}
 \end{figure}
+We have
+$$
+y(t) = \int_{0}^{t} g(\tau)p(t-\tau) d\tau
+$$
+$$
+g(t)
+=
+\begin{cases}
+    t       & 0 \leq t \leq 1 \\
+    1       & 1 \le  t \leq 2 \\
+    -(t-3)  & 2 \le  t \leq 3 \\
+    0   & otherwise
+\end{cases}
+\quad
+p(t)
+=
+\begin{cases}
+    1   & 0 \leq t \leq 1 \\
+    0   & otherwise
+\end{cases}
+$$
+$$
+y(t) = \int_{0}^{t} g(t-\tau)u(\tau) d\tau
+=
+\begin{cases}
+    \int_{0}^{t} \tau d\tau & 0 \leq t \leq 1 \\
+    \int_{t-1}^{1} \tau d\tau + \int_{1}^{t} p(t-\tau) d\tau  & 1 \leq t \leq 2 \\
+    \int_{t-1}^{2} p(t-\tau) d\tau + \int_{2}^{t} -(\tau -3) p(t-\tau)d\tau  & 2 \leq t \leq 3 \\
+    \int_{t-1}^{3} -(\tau-3)p(t-\tau) d\tau & 3 \leq t \leq 4 \\
+    0   & otherwise
+\end{cases}
+$$
+$$y(t) =
+\begin{cases}
+    \frac{ t^2}{2}          & 0 \leq t \leq 1 \\
+    \frac{-t^2}{2} + 2t - 1 & 1 \leq t \leq 2 \\
+    \frac{-t^2}{2} + 2t - 1 & 2 \le  t \leq 3 \\
+    \frac{ t^2}{2} - 4t + 8 & 3 \le  t \leq 4 \\
+    0   & otherwise
+\end{cases}
+$$
+\begin{figure}[h!]
+\centering
+\begin{tikzpicture}[>=stealth]
+    \begin{axis}[
+        xmin=-.5,xmax=4.5,
+        ymin=-.5,ymax=2,
+        axis x line=middle,
+        axis y line=middle,
+        axis line style=->,
+        xlabel={$t$},
+        ylabel={$y(t)$},
+        width=.45\textwidth,
+        height=0.25\textwidth,
+        ]
+        \addplot[no marks,black,-] expression[domain=0:1,samples=30]{x*x/2};
+        \addplot[no marks,black,-] expression[domain=1:2,samples=30]{-x*x/2 + 2*x -1};
+        \addplot[no marks,black,-] expression[domain=2:3,samples=30]{-x*x/2 + 2*x -1};
+        \addplot[no marks,black,-] expression[domain=3:4,samples=30]{x*x/2 - 4*x +8};
+    \end{axis}
+\end{tikzpicture}
+\end{figure}
 
+
+\newpage
 \section*{Problem 2}
-Let $v_1=\begin{bmatrix} 1 \\ 3 \\ 5 \end{bmatrix}$,$v_1=\begin{bmatrix} 2 \\ 5 \\ 9 \end{bmatrix}$,$v_1=\begin{bmatrix} -3 \\ 9 \\ 3 \end{bmatrix}$,
+Let $v_1=\begin{bmatrix} 1 \\ 3 \\ 5 \end{bmatrix}$,$v_2=\begin{bmatrix} 2 \\ 5 \\ 9 \end{bmatrix}$,$v_2=\begin{bmatrix} -3 \\ 9 \\ 3 \end{bmatrix}$,
 \begin{enumerate}[1)]
 \item Determine if $\{v_1,v_2,v_3\}$ is linearly independent?
 \newline
+We can check for independence by performing Gaussian elimination of the matrix comprised of $[v_1 \quad v_2 \quad v_3]$
+$$
+A =
+\begin{bmatrix}
+1 & 2 & -3 \\
+3 & 5 & 9  \\
+5 & 9 & 3
+\end{bmatrix}
+$$
+$$
+\begin{bmatrix}
+1 & 2 & -3 \\
+3 & 5 & 9  \\
+5 & 9 & 3
+\end{bmatrix}
+\implies
+\begin{bmatrix}
+1 & 2  & -3  \\
+0 & -1 & -18 \\
+0 & -1 & -12
+\end{bmatrix}
+\implies
+\begin{bmatrix}
+1 & 2  & -3  \\
+0 & -1 & -18 \\
+0 & 0  & -6
+\end{bmatrix}
+$$
+Since we have reduced this to an upper triangular matrix each column is linearly independent from each other.
+This implies that the rank of the matrix is $3$.
 \item If it is linearly independent find $a$, $b$, $c$ where $av_1 + bv_2 + cv_3 = 0$.
 If not, find the relations among $v_1,v_2,v_3$.
 \newline
+Since all the columns are linearly independent and the rank matches the dimensions of the matrix the null space of $A$ only contains the zero vector.
+$$
+\begin{bmatrix}a\\b\\c\end{bmatrix}
+=
+\begin{bmatrix}0\\0\\0\end{bmatrix}
+$$
 \end{enumerate}
 
+\newpage
 \section*{Problem 3}
 Given 5 equations:
 \begin{align*}
@@ -84,10 +185,120 @@ Given 5 equations:
 \item Find the closest solution $\{a,b\}$ to the five equations.
 {\color{blue} Use MATLAB to confirm how "close" it is.}
 \newline
+If we rewrite the equations into matrix form $Ax=b$
+$$
+A=
+\begin{bmatrix}
+2 & 1 \\
+6 & 1 \\
+20 & 1 \\
+30 & 1 \\
+40 & 1 \\
+\end{bmatrix}
+\qquad
+x =
+\begin{bmatrix} a \\ b \end{bmatrix}
+\qquad
+b =
+\begin{bmatrix}
+20 \\
+18 \\
+10 \\
+6  \\
+2  \\
+\end{bmatrix}
+$$
+We can solve this equation by performing the pseudoinverse and modifying our original equation with $A^TAx=A^Tb \implies x = (A^TA)^{-1}A^Tb$
+\newline
+First we compute $A^TA$
+$$
+A^TA
+=
+\begin{bmatrix}
+2 & 6 & 20 & 30 & 40 \\
+1 & 1 & 1 & 1 & 1 \\
+\end{bmatrix}
+\begin{bmatrix}
+2  & 1 \\
+6  & 1 \\
+20 & 1 \\
+30 & 1 \\
+40 & 1 \\
+\end{bmatrix}
+=
+\begin{bmatrix}
+2940  & 98 \\
+98  & 5 \\
+\end{bmatrix}
+$$
+Now we can find the inverse of $A^TA$
+$$(A^TA)^{-1}
+=
+\frac{1}{det(A^TA)}
+adj(A^TA)
+=
+\frac{1}{5096}
+\begin{bmatrix}
+5 & -98 \\
+-98 & 2940 \\
+\end{bmatrix}
+$$
+$$
+x = (A^TA)^{-1}A^Tb
+=
+\frac{1}{5096}
+\begin{bmatrix}
+5 & -98 \\
+-98 & 2940 \\
+\end{bmatrix}
+\begin{bmatrix}
+2 & 6 & 20 & 30 & 40 \\
+1 & 1 & 1 & 1 & 1 \\
+\end{bmatrix}
+\begin{bmatrix}
+20 \\
+18 \\
+10 \\
+6  \\
+2  \\
+\end{bmatrix}
+=
+\frac{1}{5096}
+\begin{bmatrix}
+5 & -98 \\
+-98 & 2940 \\
+\end{bmatrix}
+\begin{bmatrix}
+608 \\
+56
+\end{bmatrix}
+=
+\frac{1}{5096}
+\begin{bmatrix}
+-2448 \\
+105056
+\end{bmatrix}
+$$
+$$
+\begin{bmatrix}
+a\\
+b
+\end{bmatrix}
+=
+\begin{bmatrix}
+-0.480377 \\
+20.615385
+\end{bmatrix}
+$$
+My error using squared error $(Ax-b)^T(Ax-b)$ was $1.6075$ while matlab's solution using $pinv(A)*x$ was also $1.6075$ and also came to the same numerical solution.
+
+
 \item Is there any geometric meaning for $\{a,b\}$?
 \newline
+Each equation can be thought of as a line in the plane and our solution is the point that minimizes the squared error for all equations.
 \end{enumerate}
 
+\newpage
 \section*{Problem 4}
 Using the transfer function $\frac{Y(s)}{R(s)} = \frac{6}{(s+2)(s+3)}$.
 \newline
@@ -95,18 +306,20 @@ Note this transfer function has no zero/pole cancellation and is a minimal polyn
 \begin{enumerate}[1)]
 \item Convert from Transfer function to Differential equation then to the State equations.
 \newline
-\item Confirm by converting diretly from the Transfer function to the State equation.
+\item Confirm by converting directly from the Transfer function to the State equation.
 {\color{blue} Use MATLAB to confirm.}
 \newline
-\item Calculate the impulse respone of the system.
+\item Calculate the impulse response of the system.
 \newline
 \end{enumerate}
 
+\newpage
 \section*{Problem 5}
 Use the Cayley Hamilton Theorem to find $A^{-1}$ where $A = \begin{bmatrix} 0 & 1 \\ -2 & 3 \end{bmatrix}$.
 Validate your answer with $AA^{-1}$.
 \newline
 
+\newpage
 \section*{Problem 6}
 Given the following system with initial conditions:
 \begin{align*}
@@ -115,7 +328,7 @@ y(t) &= \begin{bmatrix} 1 & 3 \end{bmatrix} x(t) \\
 x(0) &= \begin{bmatrix} 4 \\ 5 \end{bmatrix} \\
 \end{align*}
 \begin{enumerate}[a)]
-\item Find the state trasition matrix $\varphi (t) = e^{At}$. 
+\item Find the state trasition matrix $\varphi (t) = e^{At}$.
 {\color{blue} Use MATLAB to confirm}
 \newline
 
