Final-p1: Fixed a typo

--- a/Final/Part1/Final-p1.tex
+++ b/Final/Part1/Final-p1.tex
@@ -848,7 +848,7 @@ $$ U =
 0 & \sqrt{2} & 0 & 0 \\
 1 & 0 & 1 & 0 \\
 1 & 0 & -1 & 0 \\
-0 & 0 & 0 & 1 \\
+0 & 0 & 0 & \sqrt{2} \\
 \end{bmatrix}
 $$
 So we have but the columns are correct up to the sign so we just need to test to determine the sign for each column to recreate $A$
